--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,24 @@
 {
-    "name": "mirasvit/module-blog-sample-data",
-    "description": "Blog Sample Data",
-    "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
-        "magento/module-store": "100.0.*",
-        "magento/module-backend": "100.0.*",
-        "magento/framework": "100.0.*"
-    },
-    "type": "magento2-module",
-    "version": "1.0.0",
-    "license": [
-      "proprietary"
+  "name": "mirasvit/module-blog-sample-data",
+  "description": "Blog Sample Data",
+  "require": {
+    "php": "~5.5.0|~5.6.0|~7.0.0",
+    "magento/module-store": "100.0.*",
+    "magento/module-backend": "100.0.*",
+    "magento/framework": "100.0.*",
+    "fzaninotto/faker": "*"
+  },
+  "type": "magento2-module",
+  "version": "1.0.0",
+  "license": [
+    "proprietary"
+  ],
+  "autoload": {
+    "files": [
+      "src/BlogSampleData/registration.php"
     ],
-    "autoload": {
-        "files": [
-            "src/BlogSampleData/registration.php"
-        ],
-        "psr-4": {
-            "Mirasvit\\BlogSampleData\\": "src/BlogSampleData"
-        }
+    "psr-4": {
+      "Mirasvit\\BlogSampleData\\": "src/BlogSampleData"
     }
+  }
 }
