--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,13 @@
   "description": "Blog Sample Data",
   "require": {
     "php": "~5.5.0|~5.6.0|~7.0.0",
-    "magento/module-store": "100.0.*",
-    "magento/module-backend": "100.0.*",
-    "magento/framework": "100.0.*",
+    "magento/module-store": "100.0.*|100.1.*",
+    "magento/module-backend": "100.0.*|100.1.*",
+    "magento/framework": "100.0.*|100.1.*",
     "fzaninotto/faker": "*"
   },
   "type": "magento2-module",
-  "version": "1.0.3",
+  "version": "1.0.4-alpha1",
   "license": [
     "proprietary"
   ],
