--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "mirasvit/module-blog-sample-data",
   "description": "Blog Sample Data",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0",
+    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0",
     "magento/module-store": "100.0.*|100.1.*",
     "magento/module-backend": "100.0.*|100.1.*",
     "magento/framework": "100.0.*|100.1.*",
