--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,7 @@
   "name": "mirasvit/module-blog-sample-data",
   "description": "Blog Sample Data",
   "require": {
-    "php": "~5.5.0|~5.6.0|~7.0.0|~7.1.0|~7.2.0",
-    "magento/module-store": "100.0.*|100.1.*|100.2.*|101.0.*",
-    "magento/module-backend": "100.0.*|100.1.*|100.2.*|101.0.*",
-    "magento/framework": "100.0.*|100.1.*|100.2.*|101.0.*",
-    "mirasvit/module-core": ">=1.2.46",
+    "mirasvit/module-core": "dev-master|>=1.2.46",
     "mirasvit/module-sample-data": "^1.1",
     "mirasvit/module-blog": "*"
   },
